crates/qwik-optimizer-oxc/tests/snapshots/example_ts_enums_no_transpile.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
---
=== test.tsx ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XumqEURaLxI = () => import("./test_App_component_XumqEURaLxI");
import { component$, useStore } from "@qwik.dev/core";
export enum Thing {
	A,
	B
}
export const App = /* @__PURE__ */ componentQrl(/* @__PURE__ */ qrl(i_XumqEURaLxI, "App_component_XumqEURaLxI"));

=== test.tsx_App_component_XumqEURaLxI.tsx === (ENTRY)
export const App_component_XumqEURaLxI = () => {
	console.log(Thing.A);
	return <>
			<p class="stuff">Hello Qwik</p>
		</>;
}
