crates/qwik-optimizer-oxc/tests/snapshots/example_use_client_effect.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
---
=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { useBrowserVisibleTaskQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
const i_80js9RUUsfM = () => import("./test.tsx_Child_component_80js9RUUsfM");
const i_0qCMfawldvU = () => import("./test.tsx_useBrowserVisibleTask_0qCMfawldvU");
import { component$, useBrowserVisibleTask$, useStore, useStyles$ } from "@qwik.dev/core";
export const Child = /* @__PURE__ */ componentQrl(/* @__PURE__ */ qrl(i_80js9RUUsfM, "Child_component_80js9RUUsfM"));

=== test.tsx_Child_component_80js9RUUsfM.js === (ENTRY)
import { qrl } from "@qwik.dev/core";
const i_0qCMfawldvU = () => import("./test.tsx_useBrowserVisibleTask_0qCMfawldvU");
import { _jsxSorted } from "@qwik.dev/core";
export const Child_component_80js9RUUsfM = () => {
	const state = useStore({ count: 0 });
	/* @__PURE__ */ useBrowserVisibleTaskQrl(/* @__PURE__ */ qrl(i_0qCMfawldvU, "useBrowserVisibleTask_0qCMfawldvU", [state]));
	return /* @__PURE__ */ _jsxSorted("div", null, null, state.count, 3, "u6_0");
};

=== test.tsx_useBrowserVisibleTask_0qCMfawldvU.js === (ENTRY)
import { _captures } from "@qwik.dev/core";
export const useBrowserVisibleTask_0qCMfawldvU = () => {
	const state = _captures[0];
	const timer = setInterval(() => {
		state.count++;
	}, 1e3);
	return () => {
		clearInterval(timer);
	};
};
