crates/qwik-optimizer-oxc/tests/snapshots/example_use_optimization.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
---
=== test.jsx ===
import { componentQrl } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
import { $, component$, useTask$ } from "@qwik.dev/core";
import { CONST } from "const";
export const Works = /* @__PURE__ */ componentQrl(/* @__PURE__ */ inlinedQrl((props) => {
	const { countNested } = useStore({ value: { count: 0 } }).value;
	const countNested2 = countNested;
	const { hello } = countNested2;
	const bye = hello.bye;
	const { ciao } = bye.italian;
	return <div ciao={ciao}>{foo}</div>;
}, "Works_component_xJyUXaLUiKw"));
