crates/qwik-optimizer-oxc/tests/snapshots/example_use_server_mount.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { component$, useTask$, useStore, useStyles$ } from "@qwik.dev/core";
import mongo from "mongodb";
import redis from "redis";

export const Parent = component$(() => {
  const state = useStore({
    text: "",
  });

  // Double count watch
  useTask$(async () => {
    state.text = await mongo.users();
    redis.set(state.text);
  });

  return <div onClick$={() => console.log("parent")}>{state.text}</div>;
});

export const Child = component$(() => {
  const state = useStore({
    text: "",
  });

  // Double count watch
  useTask$(async () => {
    state.text = await mongo.users();
  });

  return <div onClick$={() => console.log("child")}>{state.text}</div>;
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Parent_component_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () => import("./test.tsx_useTask_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () => import("./test.tsx_Parent_component_div_q_e_click_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () => import("./test.tsx_Child_component_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () => import("./test.tsx_useTask_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () => import("./test.tsx_Child_component_div_q_e_click_XXXXXXXXXXXX");
import { useStore } from "@qwik.dev/core";
import mongo from "mongodb";
import redis from "redis";
export const Parent = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Parent_component_XXXXXXXXXXXX"),
);
export const Child = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Child_component_XXXXXXXXXXXX"),
);

=== test.tsx_Parent_component_XXXXXXXXXXXX.js === (ENTRY)
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_useTask_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () => import("./test.tsx_Parent_component_div_q_e_click_XXXXXXXXXXXX");
import { useTaskQrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { useStore } from "@qwik.dev/core";
export const Parent_component_XXXXXXXXXXXX = () => {
  const state = useStore({ text: "" });
  useTaskQrl(/* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "useTask_XXXXXXXXXXXX", [state]));
  return /* @__PURE__ */ _jsxSorted(
    "div",
    null,
    {
      "q-e:click": /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Parent_component_div_q_e_click_XXXXXXXXXXXX"),
    },
    state.text,
    3,
    "u6_0",
  );
};

/*
{
  "origin": "test.tsx",
  "name": "Parent_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Parent_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Parent_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== test.tsx_useTask_XXXXXXXXXXXX.js === (ENTRY)
import { _captures } from "@qwik.dev/core";
import mongo from "mongodb";
import redis from "redis";
export const useTask_XXXXXXXXXXXX = async () => {
  const state = _captures[0];
  state.text = await mongo.users();
  redis.set(state.text);
};

/*
{
  "origin": "test.tsx",
  "name": "useTask_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_useTask",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_useTask_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "test.tsx_Parent_component",
  "ctxKind": "function",
  "ctxName": "useTask$",
  "captures": true,
  "captureNames": [
    "state"
  ]
}
*/

=== test.tsx_Parent_component_div_q_e_click_XXXXXXXXXXXX.js === (ENTRY)
export const Parent_component_div_q_e_click_XXXXXXXXXXXX = () => console.log("parent");

/*
{
  "origin": "test.tsx",
  "name": "Parent_component_div_q_e_click_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Parent_component_div_q_e_click",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Parent_component_div_q_e_click_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "test.tsx_Parent_component",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false
}
*/

=== test.tsx_Child_component_XXXXXXXXXXXX.js === (ENTRY)
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_useTask_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () => import("./test.tsx_Child_component_div_q_e_click_XXXXXXXXXXXX");
import { useTaskQrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { useStore } from "@qwik.dev/core";
export const Child_component_XXXXXXXXXXXX = () => {
  const state = useStore({ text: "" });
  useTaskQrl(/* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "useTask_XXXXXXXXXXXX", [state]));
  return /* @__PURE__ */ _jsxSorted(
    "div",
    null,
    {
      "q-e:click": /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Child_component_div_q_e_click_XXXXXXXXXXXX"),
    },
    state.text,
    3,
    "u6_1",
  );
};

/*
{
  "origin": "test.tsx",
  "name": "Child_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Child_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Child_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== test.tsx_useTask_XXXXXXXXXXXX.js === (ENTRY)
import { _captures } from "@qwik.dev/core";
import mongo from "mongodb";
export const useTask_XXXXXXXXXXXX = async () => {
  const state = _captures[0];
  state.text = await mongo.users();
};

/*
{
  "origin": "test.tsx",
  "name": "useTask_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_useTask",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_useTask_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "test.tsx_Child_component",
  "ctxKind": "function",
  "ctxName": "useTask$",
  "captures": true,
  "captureNames": [
    "state"
  ]
}
*/

=== test.tsx_Child_component_div_q_e_click_XXXXXXXXXXXX.js === (ENTRY)
export const Child_component_div_q_e_click_XXXXXXXXXXXX = () => console.log("child");

/*
{
  "origin": "test.tsx",
  "name": "Child_component_div_q_e_click_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Child_component_div_q_e_click",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Child_component_div_q_e_click_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "test.tsx_Child_component",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false
}
*/

=== DIAGNOSTICS ===

[]
