crates/qwik-optimizer-oxc/tests/snapshots/example_with_style.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { $, component$, useStyles$ } from "@qwik.dev/core";

export const Foo = component$(
  () => {
    useStyles$(".class {}");
    return <div class="class" />;
  },
  {
    tagName: "my-foo",
  },
);

=== test.tsx ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_gZqPatVoDqw = () => import("./test.tsx_Foo_component_gZqPatVoDqw");
const i_0cZU0P2qlwk = () => import("./test.tsx_Foo_useStyles_0cZU0P2qlwk");
export const Foo = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_gZqPatVoDqw, "Foo_component_gZqPatVoDqw"),
);

=== test.tsx_Foo_component_gZqPatVoDqw.tsx === (ENTRY)
import { qrl } from "@qwik.dev/core";
const i_0cZU0P2qlwk = () => import("./test.tsx_Foo_useStyles_0cZU0P2qlwk");
import { useStylesQrl } from "@qwik.dev/core";
export const Foo_component_gZqPatVoDqw = () => {
  useStylesQrl(/* @__PURE__ */ qrl(i_0cZU0P2qlwk, "Foo_useStyles_0cZU0P2qlwk"));
  return <div class="class" />;
};

/*
{
  "origin": "test.tsx",
  "name": "Foo_component_gZqPatVoDqw",
  "entry": null,
  "displayName": "test.tsx_Foo_component",
  "hash": "gZqPatVoDqw",
  "canonicalFilename": "test.tsx_Foo_component_gZqPatVoDqw",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== test.tsx_Foo_useStyles_0cZU0P2qlwk.tsx === (ENTRY)
export const Foo_useStyles_0cZU0P2qlwk = ".class {}";

/*
{
  "origin": "test.tsx",
  "name": "Foo_useStyles_0cZU0P2qlwk",
  "entry": null,
  "displayName": "test.tsx_Foo_useStyles",
  "hash": "0cZU0P2qlwk",
  "canonicalFilename": "test.tsx_Foo_useStyles_0cZU0P2qlwk",
  "path": "",
  "extension": "tsx",
  "parent": "test.tsx_Foo_component",
  "ctxKind": "function",
  "ctxName": "useStyles$",
  "captures": false
}
*/
