crates/qwik-optimizer-oxc/tests/snapshots/hoisted_fn_signal_in_loop.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { component$ } from "@qwik.dev/core";

export const App = component$(() => {
  const data = {
    value: [
      { value: { id: 1, selected: { value: true } } },
      { value: { id: 2, selected: { value: false } } },
      { value: { id: 3, selected: { value: true } } },
    ],
  };

  return (
    <table>
      {data.value.map((row) => {
        return (
          <tr key={row.value.id} class={row.value.selected.value ? "danger" : ""}>
            <td>{row.value.id}</td>
          </tr>
        );
      })}
    </table>
  );
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { _fnSignal } from "@qwik.dev/core";
const _hf0 = (p0) => p0.value.selected.value ? "danger" : "";
const _hf0_str = "p0.value.selected.value?\"danger\":\"\"";
const i_XumqEURaLxI = () => import("./test.tsx_App_component_XumqEURaLxI");
export const App = /* @__PURE__ */ componentQrl(/* @__PURE__ */ qrl(i_XumqEURaLxI, "App_component_XumqEURaLxI"));

=== test.tsx_App_component_XumqEURaLxI.js === (ENTRY)
import { _jsxSorted } from "@qwik.dev/core";
import { _fnSignal } from "@qwik.dev/core";
const _hf0 = (p0) => p0.value.selected.value ? "danger" : "";
const _hf0_str = "p0.value.selected.value?\"danger\":\"\"";
export const App_component_XumqEURaLxI = () => {
	const data = { value: [
		{ value: {
			id: 1,
			selected: { value: true }
		} },
		{ value: {
			id: 2,
			selected: { value: false }
		} },
		{ value: {
			id: 3,
			selected: { value: true }
		} }
	] };
	return /* @__PURE__ */ _jsxSorted("table", null, null, data.value.map((row) => {
		return /* @__PURE__ */ _jsxSorted("tr", null, { class: _fnSignal(_hf0, [row], _hf0_str) }, /* @__PURE__ */ _jsxSorted("td", null, null, row.value.id, 3, "u6_0"), 3, row.value.id);
	}), 3, "u6_1");
};

/*
{
  "origin": "test.tsx",
  "name": "App_component_XumqEURaLxI",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "XumqEURaLxI",
  "canonicalFilename": "test.tsx_App_component_XumqEURaLxI",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/
