crates/qwik-optimizer-oxc/tests/snapshots/impure_template_fns.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
---
=== test.ts ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
const i_jN9ZUuuADmk = () => import("./test.tsx_default_component_jN9ZUuuADmk");
const i_zo9wkw0NBzs = () => import("./test.tsx_default_component_button_q_e_click_zo9wkw0NBzs");
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
import { useSignal } from "@qwik.dev/core";
const useFoo = (count) => {
	const tag = (s) => {
		const value = typeof s === "string" ? s : s[0];
		return `${value}-${count.value}`;
	};
	return tag;
};
export default /* @__PURE__ */ componentQrl(/* @__PURE__ */ qrl(i_jN9ZUuuADmk, "default_component_jN9ZUuuADmk"));

=== test.tsx_default_component_jN9ZUuuADmk.ts === (ENTRY)
import { qrl } from "@qwik.dev/core";
const i_zo9wkw0NBzs = () => import("./test.tsx_default_component_button_q_e_click_zo9wkw0NBzs");
import { _jsxSorted } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
import { useSignal } from "@qwik.dev/core";
export const default_component_jN9ZUuuADmk = () => {
	const count = useSignal(0);
	const foo = useFoo(count);
	return /* @__PURE__ */ _jsxSorted(_Fragment, null, null, [
		/* @__PURE__ */ _jsxSorted("p", null, null, foo("test"), 3, "u6_0"),
		/* @__PURE__ */ _jsxSorted("p", null, null, foo`test`, 3, "u6_1"),
		/* @__PURE__ */ _jsxSorted("button", null, { "q-e:click": () => count.value++ }, "Count up", 3, "u6_2")
	], 1, "u6_3");
};

=== test.tsx_default_component_button_q_e_click_zo9wkw0NBzs.ts === (ENTRY)
export const default_component_button_q_e_click_zo9wkw0NBzs = () => count.value++;
